syntax = "proto3";

package meta_user;

option go_package = "socialink/meta-user-service/proto";

import "google/protobuf/timestamp.proto";

// Meta User Service for cross-platform user management
service MetaUserService {
  // User Management
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
  
  // Platform Linking
  rpc LinkPlatform(LinkPlatformRequest) returns (LinkPlatformResponse);
  rpc UnlinkPlatform(UnlinkPlatformRequest) returns (UnlinkPlatformResponse);
  
  // Trust & Security
  rpc UpdateTrustScore(UpdateTrustScoreRequest) returns (UpdateTrustScoreResponse);
  rpc GetTrustScore(GetTrustScoreRequest) returns (GetTrustScoreResponse);
  rpc DetectAnomaly(DetectAnomalyRequest) returns (DetectAnomalyResponse);
  
  // Cross-Platform Sync
  rpc EnableSync(EnableSyncRequest) returns (EnableSyncResponse);
  rpc DisableSync(DisableSyncRequest) returns (DisableSyncResponse);
  rpc SyncUserData(SyncUserDataRequest) returns (SyncUserDataResponse);
  
  // Privacy & Compliance
  rpc UpdatePrivacySettings(UpdatePrivacySettingsRequest) returns (UpdatePrivacySettingsResponse);
  rpc ExportUserData(ExportUserDataRequest) returns (ExportUserDataResponse);
  rpc RequestDeletion(RequestDeletionRequest) returns (RequestDeletionResponse);
}

// Messages

message CreateUserRequest {
  string email = 1;
  string password = 2;
  optional string phone_number = 3;
  string ip_address = 4;
  string user_agent = 5;
  string device_id = 6;
  string device_type = 7;
  string os = 8;
  string region = 9;
}

message CreateUserResponse {
  string user_id = 1;
  string meta_id = 2;
  string email = 3;
  string status = 4;
  double trust_score = 5;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  MetaUser user = 1;
}

message UpdateUserRequest {
  string user_id = 1;
  optional string email = 2;
  optional string phone_number = 3;
  optional string status = 4;
}

message UpdateUserResponse {
  bool success = 1;
  MetaUser user = 2;
}

message DeleteUserRequest {
  string user_id = 1;
  bool hard_delete = 2;
}

message DeleteUserResponse {
  bool success = 1;
}

message AuthenticateRequest {
  string email = 1;
  string password = 2;
  string ip_address = 3;
  string user_agent = 4;
  string device_id = 5;
}

message AuthenticateResponse {
  bool success = 1;
  string session_token = 2;
  bool requires_2fa = 3;
  bool anomaly_detected = 4;
  double anomaly_score = 5;
  MetaUser user = 6;
}

message LinkPlatformRequest {
  string meta_user_id = 1;
  string platform = 2;
  string platform_user_id = 3;
}

message LinkPlatformResponse {
  bool success = 1;
  string message = 2;
}

message UnlinkPlatformRequest {
  string meta_user_id = 1;
  string platform = 2;
}

message UnlinkPlatformResponse {
  bool success = 1;
}

message UpdateTrustScoreRequest {
  string user_id = 1;
}

message UpdateTrustScoreResponse {
  double trust_score = 1;
  string risk_level = 2;
  map<string, ScoreComponent> components = 3;
}

message GetTrustScoreRequest {
  string user_id = 1;
}

message GetTrustScoreResponse {
  double trust_score = 1;
  string risk_level = 2;
  google.protobuf.Timestamp last_updated = 3;
}

message DetectAnomalyRequest {
  string user_id = 1;
  string activity_type = 2;
  map<string, string> metadata = 3;
}

message DetectAnomalyResponse {
  bool anomaly_detected = 1;
  double anomaly_score = 2;
  string anomaly_type = 3;
  string severity = 4;
}

message EnableSyncRequest {
  string meta_user_id = 1;
}

message EnableSyncResponse {
  bool success = 1;
}

message DisableSyncRequest {
  string meta_user_id = 1;
}

message DisableSyncResponse {
  bool success = 1;
}

message SyncUserDataRequest {
  string meta_user_id = 1;
  string source_platform = 2;
  map<string, string> data = 3;
}

message SyncUserDataResponse {
  bool success = 1;
  int32 conflicts = 2;
}

message UpdatePrivacySettingsRequest {
  string user_id = 1;
  PrivacySettings settings = 2;
}

message UpdatePrivacySettingsResponse {
  bool success = 1;
}

message ExportUserDataRequest {
  string user_id = 1;
  string format = 2; // json, csv, etc.
}

message ExportUserDataResponse {
  string download_url = 1;
  google.protobuf.Timestamp expires_at = 2;
}

message RequestDeletionRequest {
  string user_id = 1;
  string reason = 2;
}

message RequestDeletionResponse {
  bool success = 1;
  google.protobuf.Timestamp scheduled_for = 2;
}

// Complex Types

message MetaUser {
  string id = 1;
  string meta_id = 2;
  string email = 3;
  bool email_verified = 4;
  optional string phone_number = 5;
  bool phone_verified = 6;
  string status = 7;
  double trust_score = 8;
  string risk_level = 9;
  string account_tier = 10;
  PlatformLinks platform_links = 11;
  SecurityProfile security_profile = 12;
  PrivacySettings privacy_settings = 13;
  google.protobuf.Timestamp created_at = 14;
  google.protobuf.Timestamp updated_at = 15;
  optional google.protobuf.Timestamp last_seen_at = 16;
}

message PlatformLinks {
  optional string socialink_user_id = 1;
  optional string vignette_user_id = 2;
  google.protobuf.Timestamp linked_at = 3;
  string link_status = 4;
  bool sync_enabled = 5;
}

message SecurityProfile {
  bool two_factor_enabled = 1;
  string two_factor_method = 2;
  bool biometric_enabled = 3;
  bool passkey_enabled = 4;
  int32 failed_login_attempts = 5;
  google.protobuf.Timestamp last_password_change = 6;
}

message PrivacySettings {
  string profile_visibility = 1;
  string activity_visibility = 2;
  bool cross_platform_sharing = 3;
  bool marketing_opt_in = 4;
  bool personalization_opt_in = 5;
  string location_tracking = 6;
}

message ScoreComponent {
  double score = 1;
  double weight = 2;
  double contribution = 3;
  string description = 4;
}
